--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Marcos Antonio - Advocacia</title>
     <link rel="stylesheet" href="style.css">
     <script src="java.js" defer></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1689905136237406"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
