--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-1689905136237406">
     <title>Marcos Antonio - Advocacia</title>
     <link rel="stylesheet" href="style.css">
     <script src="java.js" defer></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1689905136237406"
-     crossorigin="anonymous"></script>
+   
 </head>
 <body>
     <header>
